# medley-recommender

./: .dockerignore  .effnv  .env.example  .gitignore  Cargo.toml  DATA_GATHERER_README.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
api/: __init__.py  main.py  mcp_server.py  models.py  routes.py
crates/medley-core/: Cargo.toml
crates/medley-core/migrations/: 001_init.sql  002_uuid_song_ids.sql  003_drop_songs_fts.sql  004_song_submissions.sql
crates/medley-core/src/: config.rs  lib.rs
crates/medley-core/src/domain/: error.rs  id.rs  lyrics.rs  mod.rs  models.rs  pagination.rs  validation.rs  youtube.rs
crates/medley-core/src/embed/: mod.rs  voyage.rs
crates/medley-core/src/index/: mod.rs  qdrant_edge.rs  tantivy_text.rs
crates/medley-core/src/repo/: mod.rs  sqlite.rs  submission_sqlite.rs
crates/medley-core/src/service/: mod.rs  search_service.rs  song_service.rs  submission_service.rs
crates/medley-core/tests/: legacy_db.rs  qdrant_edge.rs  service_search.rs  service_song.rs  sqlite_repo.rs  submission_repo.rs  submission_service.rs  tantivy_text.rs  voyage_client.rs
crates/medley-server/: Cargo.toml
crates/medley-server/src/: app.rs  auth.rs  lib.rs  main.rs  mcp.rs  rate_limit.rs  reindex.rs  state.rs
crates/medley-server/src/routes/: api.rs  mod.rs  ui.rs
crates/medley-server/templates/: base.html  catalog.html  home.html  login.html  song_form.html  submission_detail.html  submissions.html
crates/medley-server/tests/: api_health.rs  api_songs.rs  auth.rs  submissions_ui.rs
data/: links.json  medley.db  songs.json
data/edge_shard/: edge_config.json
data/edge_shard/segments/9e22025b-c835-413c-a971-3807998608c1/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
data/edge_shard/segments/9e22025b-c835-413c-a971-3807998608c1/vector_storage/vectors/: config.json
data/index/chroma_db/: chroma.sqlite3
data/playlist-extraction/: found_links.json
data/songs_embeddings/youtube/: -8dDlZILLgs.json  -RUFYop17dw.json  -pcV6vYef5g.json  -tO5Y4Zk6Mk.json  0EDWKZ7ALZQ.json  0fiZHAtywaE.json  0jWjViV2l7Q.json  0wEyKTcaciY.json  1JTFp5msFmQ.json  1PYK87rAvKI.json  1alPmvbzv2U.json  1amihV4IpCY.json  1oMeeclI6E4.json  2T2L6omvbRQ.json  3V6oxYOZFK0.json  3WmoEorvIxo.json  3oELfCWUBAU.json  3pSoKrnV-Yg.json  42USFt5v6yM.json  4AYM5h4ZuA0.json  4GthZbt1lPo.json  5LeeDRl2tYM.json  5OCFLuTvWHw.json  5QXPkvNaTq4.json  5WhNouObqPU.json  5dGfWr3j3uE.json  5fFbY2b0Fok.json  5rhgtBMlQYs.json  694hjz-l_0E.json  6Xah0QwSc6Y.json  6lRL7pGQ0KY.json  70LN8dy70T8.json  71KD77bpNmQ.json  7AMQ_8PPlQU.json  7N1af631-cA.json  7P9_Ev7XgGI.json  7l4PaSQlaIs.json  8861n8C1QVo.json  8ClGaSkfsfE.json  8GoXdpqis_Q.json  (+214 more)
docs/: pipeline-sequence.md  release.md  search-sequence.md  song-catalog.md  vision.md
scripts/: demo.py  process_pipeline.py  run_api.py  run_streamlit.py
scripts/embeddings/: demo.py  process_pipeline.py
scripts/playlist_extractor/: extract_playlist_raw.py  orchestrate_extraction.py
scripts/servers/: run_streamlit.py
src/: __init__.py
src/audio/: __init__.py  downloader.py  extractor.py
src/database/: __init__.py  db.py  models.py
src/embeddings/: __init__.py  encoder.py  model_loader.py
src/index/: __init__.py  builder.py  searcher.py
src/utils/: __init__.py  config.py  lyrics.py
tests/: __init__.py  conftest.py  test_audio.py  test_lyrics.py
ui/: app.py
