[workspace]
resolver = "2"
members = ["crates/medley-core", "crates/medley-server"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
mockall = "0.13"
qdrant-edge = "0.7.2"
reqwest = { version = "0.12", features = ["json"] }
rmcp = { version = "1.8", features = ["server", "macros", "transport-streamable-http-server"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v5", "v7", "serde"] }
wiremock = "0.6"
askama = "0.12"
dotenvy = "0.15"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
subtle = "2"
tantivy = "0.26"
tower = "0.5"
